// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Color with snapshot should render active Color component 1`] = `
<div
  className="color-parent"
>
  <input
    checked={true}
    className="mr-2"
    data-testid="checkbox"
    id="red"
    name="red"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="color-label"
    htmlFor="red"
  >
    <div
      className="color-bullet"
      style={
        Object {
          "backgroundColor": "red",
        }
      }
    />
    <p
      className="text-sm text-accent font-normal"
    >
      red
    </p>
  </label>
</div>
`;

exports[`Testing Color with snapshot should render inactive Color component 1`] = `
<div
  className="color-parent"
>
  <input
    checked={false}
    className="mr-2"
    data-testid="checkbox"
    id="red"
    name="red"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="color-label"
    htmlFor="red"
  >
    <div
      className="color-bullet"
      style={
        Object {
          "backgroundColor": "red",
        }
      }
    />
    <p
      className="text-sm text-dark font-normal"
    >
      red
    </p>
  </label>
</div>
`;
